fix: add dark mode styles

--- a/src/assets/styles/components/_controllers.scss
+++ b/src/assets/styles/components/_controllers.scss
@@ -79,7 +79,7 @@
       background-color: var(--ds-controller-bg-default-light);
       border-radius: var(--ds-controller-border-radius-sm);
       border: var(--border-size-1) solid var(--ds-controller-border-color);
-      transition: var(--ds-controller-transition);
+      //transition: var(--ds-controller-transition);
       margin-top: var(--space-2);
 
       &:hover {
