--- a/src/assets/styles/components/_side-sheet.scss
+++ b/src/assets/styles/components/_side-sheet.scss
@@ -128,7 +128,7 @@
     background-color: color-mix(in srgb, var(--color-11) 60%, transparent);
 
     &__container {
-      background-color: var(--color-5);
+      background-color: var(--color-6);
       box-shadow: none;
       border-left: 1px solid var(--grey-40);
     }
